--- a/css/tarot.css
+++ b/css/tarot.css
@@ -34,6 +34,7 @@
     .vessel{
         /* border: 1px solid green;  */
         max-width: 1520px;
+        margin: 0 auto;
         display: flex;
         flex-direction: column; 
         justify-content:stretch;     
@@ -166,7 +167,7 @@ button.btn_toggle:hover{
 #tdesc{
     width:100%;
     height:50%;
-    border: 1px deeppink;
+    /* border: 1px deeppink; */
     background-color:transparent;
 }
 
@@ -199,7 +200,7 @@ button.btn_toggle:hover{
 
 div.parent_flex{
     /* width: 50%; */
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: flex;
     flex-wrap: nowrap;
   }
@@ -611,7 +612,8 @@ nav{
 }
 
 ul.optbar{
-    max-width: 1520px;
+    /* margin: 0 auto; */
+    max-width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
