--- a/css/gift.css
+++ b/css/gift.css
@@ -65,7 +65,7 @@ header.thinbanner {
 /* 包住main和aside的大框 */
 .vessel {
     /* border: 1px solid green; */
-    max-width: 1520px;
+    /* max-width: 1520px; */
     display: flex;
     flex-direction: column;
     justify-content: stretch;
@@ -78,8 +78,8 @@ header.thinbanner {
 
 /* aside在.vessel裡 */
 aside.aside {
-    /* border: 1px solid yellow; */
-    max-width: 100%;
+    margin: 0 auto;
+    /* max-width: 100%; */
     height: 33%;
     display: flex;
     justify-content: center;
@@ -93,7 +93,8 @@ aside.aside {
 div.left {
     display: flex;
     justify-content: flex-end;
-    width: 50%;
+    /* width: 50%; */
+    flex-grow: 1;
     /* width: 700px; */
     /* height: 450px; */
     /* border: 1px solid black; */
@@ -356,7 +357,8 @@ div.right {
 
 
 article {
-    width: 100%;
+    /* width: 100%; */
+    margin: 0;
     margin-top: 50px;
     display: flex;
     justify-content: center;
@@ -681,7 +683,7 @@ nav {
 }
 
 ul.optbar {
-    max-width: 1520px;
+    max-width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
